Updated to Java 18 and SpringBoot 3.0.0-M2
  - Update to Java JDK 18 Preview.
  - Update to SpringBoot 3.0.0-M2.
  - Align with Jakarta EE name space.
  - Upgrade compatible dependencies to new Spring version.
  - Use new maven-compiler-plugin API.
  - Swagger enhancements in GlobalExceptionHandler.java